manifests/nginxproxymanager/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxproxymanager
  namespace: nginxproxymanager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginxproxymanager
  template:
    metadata:
      labels:
        app: nginxproxymanager
    spec:
      containers:
      - name: nginxproxymanager
        image: jc21/nginx-proxy-manager:latest
        ports:
        - containerPort: 80
        - containerPort: 81
        - containerPort: 443
        volumeMounts:
        - name: data-volume
          mountPath: /data
        - name: letsencrypt-volume
          mountPath: /etc/letsencrypt
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: nginx-data-pvc
      - name: letsencrypt-volume
        persistentVolumeClaim:
          claimName: nginx-letsencrypt-pvc
