manifests/nginxproxymanager/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: debug
  namespace: nginxproxymanager
spec:
  containers:
  - name: debug
    image: curlimages/curl:latest
    command: ["/bin/sh", "-c", "sleep 3600"]
