manifests/nginxproxymanager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxproxymanager
  namespace: nginxproxymanager
spec:
  selector:
    app: nginxproxymanager
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: admin
    port: 81
    targetPort: 81
  - name: https
    port: 443
    targetPort: 443
