manifests/nginxproxymanager/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginxproxymanager
  namespace: nginxproxymanager
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nginxproxymanager.cowlab.org`)
      kind: Rule
      services:
        - name: nginxproxymanager
          port: 80
  tls:
    passthrough: true
